--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,17 @@
+body{
+    font-family: Verdana;
+
+}
+
+
 h1{
-  font-family: Verdana;
+
   font-weight: normal;
   font-size: 50px;
   color: white;
   position: center;
+}
+body a{
+  color: aquamarine;
+  font-size: 16px;
 }
